--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Angular 2 Quickstart</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="built/app/style/style.css" />
         <script src="node_modules/systemjs/dist/system-polyfills.js" defer></script>
         <script src="node_modules/systemjs/dist/system.js" defer></script>
